Fixed some UI spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -32,10 +32,6 @@ option{
   height: 180px;
   width: 220px;
 }
-/*#wrap{
-  width:380px;
-  margin: 0 auto;
-}*/
 
 /*===========================
     Custom Classes
@@ -77,9 +73,8 @@ option{
   color: white;
   padding: 10px;
   padding-right: 10px;
-  margin: auto;
-  /*margin-left: 10%;
-  margin-right: 10%;*/
+  margin-top: 15px;
+  margin-bottom: 30px;
   width: 150px;
   height:40px;
   border-radius: 7px;
@@ -118,8 +113,6 @@ option{
   padding: 10px;
   padding-right: 10px;
   margin: auto;
-  /*margin-left: 40%;
-  margin-right: 10%;*/
   width: 250px;
   border-radius: 7px;
   z-index: 1;
@@ -136,8 +129,7 @@ option{
 
 .form-group{
   margin: auto;
-  /*margin-right: 10%;
-  margin-left: 41%;*/
+  margin-bottom:10px;
   border: 1px solid black;
   border-radius: 25px;
   height: 180px;
@@ -147,8 +139,6 @@ option{
 }
 .lang-group{
   margin: auto;
-  /*margin-right: 10%;
-  margin-left: 10%;*/
   border: 1px solid black;
   border-radius: 25px;
   height: 180px;
@@ -181,8 +171,6 @@ option{
   padding: 10px;
   padding-right: 10px;
   margin: auto;
-  /*margin-left: 40%;
-  margin-right: 10%;*/
   width: 300px;
   z-index: 1;
   background-color: #DFDFDF;
@@ -190,9 +178,8 @@ option{
 .form-control{
   color:rgb(16,114,189);
   background-color:white;
-  margin: auto;
-  /*margin-right: 10%;
-  margin-left: 41%;*/
+  margin:auto;
+  margin-bottom:10px;
   border: 1px solid black;
   border-radius: 25px;
   padding-bottom: 20px;
